// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DockPanelHeader — snapshots should match snapshot for default variant 1`] = `
<div
  class="px-3 py-2 wb-surface-subtle border-b wb-outline flex items-center justify-between cursor-pointer wb-text hover:wb-surface-hover transition-colors"
>
  <div
    class="flex items-center gap-2"
  >
    <span
      data-testid="icon"
    >
      icon
    </span>
    <span
      class="text-[9px] font-black uppercase tracking-widest"
    >
      Layers
    </span>
  </div>
  <svg
    aria-hidden="true"
    class="lucide lucide-x w-3 h-3 opacity-30 hover:opacity-100"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M18 6 6 18"
    />
    <path
      d="m6 6 12 12"
    />
  </svg>
</div>
`;

exports[`DockPanelHeader — snapshots should match snapshot for subtle variant 1`] = `
<div
  class="px-3 py-2 wb-surface-subtle border-b wb-outline flex items-center justify-between cursor-pointer wb-text hover:bg-primary/10 transition-colors"
>
  <div
    class="flex items-center gap-2"
  >
    <span
      data-testid="icon"
    >
      icon
    </span>
    <span
      class="text-[9px] font-black uppercase tracking-widest"
    >
      Compliance
    </span>
  </div>
  <svg
    aria-hidden="true"
    class="lucide lucide-x w-3 h-3 opacity-30 hover:opacity-100"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M18 6 6 18"
    />
    <path
      d="m6 6 12 12"
    />
  </svg>
</div>
`;
